[package]
name = "metadata_god"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "rust"
path = "src/main.rs"

[dependencies]
flutter_rust_bridge = "1.59.0"
anyhow = "1"
audiotags = "0.4.1"

[profile.release]
# strip = "symbols"
opt-level = "s"
lto = true
codegen-units = 1